<resources>
    <string name="app_name">MyCalculator5</string>
    <string name="entNumber">Enter a number..</string>
    <string name="btn_percent">%</string>
    <string name="btn_clear_all">C</string>
    <string name="btn_sqrt">√¯</string>
    <string name="btn_div">/</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_mult">*</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_7">7</string>
    <string name="btn_9">9</string>
    <string name="btn_0">0</string>
    <string name="btn_comma">,</string>
    <string name="btn_equal">=</string>
    <string name="btn_6">6</string>
    <string name="btn_8">8</string>
    <string name="btn_add">+</string>
    <string name="btn_sub">-</string>
    <string name="theme_settings">Theme settings</string>
    <string name="_return">Return</string>
    <string name="theme_mode_light_dark">Theme mode light/dark</string>
</resources>