<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnThemeSettings"
        style="@style/TextAndEditView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="30dp"
        android:text="@string/theme_settings"
        android:textColor="@color/teal_200"
        app:layout_constraintBottom_toTopOf="@+id/numberField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/numberField"
        style="@style/TextAndEditView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:autofillHints="no"
        android:hint="@string/entNumber"
        android:inputType="phone"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/operationField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- поле знака операции -->
    <TextView
        android:id="@+id/operationField"
        style="@style/TextAndEditView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        app:layout_constraintBottom_toTopOf="@+id/resultField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"

        />

    <TextView
        android:id="@+id/resultField"
        style="@style/TextAndEditView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent">

    </TextView>

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="15dp"
        android:columnCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/resultField"
        app:layout_constraintStart_toStartOf="@+id/resultField">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnClearAll"
            style="@style/numberButtonStyle"
            android:backgroundTint="@color/purple_500"
            android:onClick="onOperationClick"
            android:text="@string/btn_clear_all" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPercent"
            style="@style/numberButtonStyle"
            android:backgroundTint="@color/purple_500"
            android:onClick="onOperationClick"
            android:text="@string/btn_percent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sqrt"
            style="@style/numberButtonStyle"
            android:backgroundTint="@color/purple_500"
            android:onClick="onOperationClick"
            android:text="@string/btn_sqrt" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDiv"
            style="@style/numberButtonStyle"
            android:backgroundTint="@color/purple_500"
            android:onClick="onOperationClick"
            android:text="@string/btn_div" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_1"
            style="@style/numberButtonStyle"
            android:onClick="onNumberClick"
            android:text="@string/btn_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_2"
            style="@style/numberButtonStyle"
            android:onClick="onNumberClick"
            android:text="@string/btn_2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_3"
            style="@style/numberButtonStyle"
            android:onClick="onNumberClick"
            android:text="@string/btn_3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMult"
            style="@style/numberButtonStyle"
            android:backgroundTint="@color/purple_500"
            android:onClick="onOperationClick"
            android:text="@string/btn_mult" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_4"
            style="@style/numberButtonStyle"
            android:onClick="onNumberClick"
            android:text="@string/btn_4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_5"
            style="@style/numberButtonStyle"
            android:onClick="onNumberClick"
            android:text="@string/btn_5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_6"
            style="@style/numberButtonStyle"
            android:onClick="onNumberClick"
            android:text="@string/btn_6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSub"
            style="@style/numberButtonStyle"
            android:backgroundTint="@color/purple_500"
            android:onClick="onOperationClick"
            android:text="@string/btn_sub" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_7"
            style="@style/numberButtonStyle"
            android:onClick="onNumberClick"
            android:text="@string/btn_7" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_8"
            style="@style/numberButtonStyle"
            android:onClick="onNumberClick"
            android:text="@string/btn_8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_9"
            style="@style/numberButtonStyle"
            android:onClick="onNumberClick"
            android:text="@string/btn_9" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAdd"
            style="@style/numberButtonStyle"
            android:backgroundTint="@color/purple_500"
            android:onClick="onOperationClick"
            android:text="@string/btn_add" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnComma"
            style="@style/numberButtonStyle"
            android:backgroundTint="@color/blue_2"
            android:onClick="onNumberClick"
            android:text="@string/btn_comma" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_0"
            style="@style/numberButtonStyle"
            android:onClick="onNumberClick"
            android:text="@string/btn_0" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEqual"
            style="@style/numberButtonStyle"
            android:layout_columnSpan="2"
            android:layout_gravity="fill"
            android:backgroundTint="@color/green"
            android:onClick="onOperationClick"
            android:text="@string/btn_equal" />

    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>